Fixed bug #42189 (xmlrpc_set_type() crashes php on invalid datetime   values).